WEB 20170214 02 bruno - Fix keyboard display on iphone

--- a/bundles/lincko/app/public/styles/generic/base.css
+++ b/bundles/lincko/app/public/styles/generic/base.css
@@ -72,6 +72,7 @@
 html, body {
 	height: 100%;
 	overflow: hidden;
+	background-color: #EFEFEF;
 }
 
 /*
